fix error messages issue on Schedule/MobileStartPage and hide shiftTradePage after toggle overtimeRequest

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/MobileDayView.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/MobileDayView.css
@@ -157,10 +157,7 @@
 	-webkit-overflow-scrolling: touch;
 }
 
-.mobile-add-request-form .overtime-add-container .overtime-request-duration{
-	height: 100px;
-}
 .mobile-add-request-form .overtime-add-container .overtime-request-duration .dropdown-menu{
-	max-height: 100px;
+	max-height: 80px;
 }
 
